--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^17.2.4",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
+    "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.17.0"
   }
